--- a/style.css
+++ b/style.css
@@ -49,3 +49,16 @@ h1 {
     font-size: 2em;
     text-align: center;
 }
+
+
+.fibonaci-cell {
+    background: rgb(218, 221, 25);
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+}
